<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/ic_me"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_user_name"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_user_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/et_user_name"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_user_password"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_user_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/et_user_password"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_user_password_confirm"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/et_user_password_confirm"
            android:layout_margin="30dp"
            android:background="@drawable/button_background"
            android:text="@string/user_register"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>