<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.ms.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_heigh" />

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/rb_view"
        android:layout_alignBottom="@+id/banner">
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_above="@id/rg_bottom"
        android:layout_marginBottom="2dp" />


    <com.github.mmin18.widget.RealtimeBlurView
        android:id="@+id/rb_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        app:realtimeBlurRadius="20dp"
        app:realtimeOverlayColor="@color/bottom_bar_overlay" />

    <RadioGroup
        android:id="@+id/rg_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_homePage"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_bottom_home"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/home_page"
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_structure"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_bottom_structure"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/structure"
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_project"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_bottom_project"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/project"
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_publicNumber"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_bottom_public_number"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/public_number"
            android:textSize="12sp" />

    </RadioGroup>

</RelativeLayout>